--- a/src/app/productos/productos/productos.component.css
+++ b/src/app/productos/productos/productos.component.css
@@ -1,13 +1,22 @@
+
+ /*
+   * IMAGENES PREVIEW  DE PRODUCTOS
+  */
+
 .img-container {
   display:flex;
   flex-wrap: wrap;
-  align-content: space-evenly;
+  align-content: center;
   }.img-container>div {
-    flex: 0 40%;
+    flex: 0 100%;
 
   }.img-product{
     border-radius: 50%;
   }
+
+  /*
+   * IMAGENES MINIATURA DE COLORES
+  */
 
   .btn-product-img {
     margin-left: 2px;
@@ -23,38 +32,4 @@
   .btn-product-img-focus {
     border: solid 2.5px blue;
     border-radius: 50%;
-  }
-
-
-  .range-slider {
-    width: 400px;
-    position: relative;
-    margin: 15px 0 30px 0;
-  }
-
-  input[type=range] {
-    width: 100%;
-    background: transparent;
-    position: absolute;
-    left: 0;
-  }
-
-  input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    background: #36b37e;
-    cursor: pointer;
-    margin-top: -5px;
-    position: relative;
-    z-index: 1;
-  }
-
-  input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 5px;
-    background: #e8e8e8;
-    border-radius: 3px;
-    border: none;
   }
