--- a/src/app/security/auth/auth-login/auth-login.component.html
+++ b/src/app/security/auth/auth-login/auth-login.component.html
@@ -12,12 +12,11 @@
                         <a class="nav-link" id="register-tab-2" data-toggle="tab" routerLink="/registro" role="tab" aria-controls="register-2" aria-selected="false">Registrarse</a>
                     </li>
                 </ul>
-                <div class="tab-content">                    
+                <div class="tab-content">
                         <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
                             <div class="form-group">
                                 <label for="email">Correo Electronico</label>
-                                <input type="text" name="email" id="email" class="form-control"
-                                [(ngModel)]="email" required>
+                                <input type="text" name="email" id="email" class="form-control" [(ngModel)]="email" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Contraseña</label>
