--- a/src/app/carrito/carrito/carrito.component.html
+++ b/src/app/carrito/carrito/carrito.component.html
@@ -9,7 +9,7 @@
                 <div class="container">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                        <li class="breadcrumb-item"><a href="#">Comprar</a></li>
+                        <li class="breadcrumb-item"><a routerLink ="/productos">Comprar</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Carrito de compras</li>
                     </ol>
                 </div><!-- End .container -->
@@ -23,35 +23,49 @@
 	                			<table class="table table-cart table-mobile">
 									<thead>
 										<tr>
-											<th>Producto</th>
+											<th></th>
+                      <th>Producto</th>
 											<th>Precio</th>
+                      <th>Color</th>
+                      <th>Talla</th>
 											<th>Cantidad</th>
-											<th>Total</th>
+											<th>SubTotal</th>
 											<th></th>
 										</tr>
 									</thead>
-
 									<tbody >
-										<tr *ngFor="let carrito of carrito; let i = index" id="carrito{{carrito.idCarrito}}" [attr.data-index]="i">
-											<td class="product-col">
+										<tr *ngFor="let carrito of carritos; let i = index" id="carrito{{carrito.idCarrito}}" [attr.data-index]="i">
+											<td width="100" class="product-col">
 												<div class="product">
 													<figure class="product-media">
-														<a href="#">
-															<img src="{{carrito.producto.urlImg}}" alt="Product image">
-														</a>
+                            <img src="{{carrito.detalleProducto.img}}" alt="Product image">
 													</figure>
+                        </div>
+                      </td>
+                      <td width="200" class="product-col">
+												<div class="product">
 													<h3 class="product-title">
-														<a href="#">{{carrito.producto.modelo}}</a>
-													</h3>
-												</div>
-											</td>
-											<td class="price-col">${{carrito.producto.precio}}</td>
-											<td class="quantity-col">
-                                                <div class="cart-product-quantity">
-                                                    <input type="number" class="form-control" value="{{carrito.cantidad}}" min="1" max="10" step="1" data-decimals="0" (change)="mostrar($event, i)" required>
-                                                </div>
-                                            </td>
-											<td class="total-col">{{calcularTotalInd(carrito)}}</td>
+                            <a href="#">{{carrito.detalleProducto.producto.nombre}}</a>
+                          </h3>
+                        </div>
+                      </td>
+											<td width="50" class="price-col">${{carrito.detalleProducto.producto.precio}}</td>
+											<td>
+                        <h3 width="60" class="product-title">
+                          <a href="#">{{carrito.detalleProducto.color.nombre}}</a>
+                        </h3>
+                      </td>
+                      <td width="60">
+                        <h3 class="product-title">
+                          <a href="#">{{carrito.detalleProducto.talla.numero}}</a>
+                        </h3>
+                      </td>
+                      <td width="40" class="quantity-col">
+                        <div class="cart-product-quantity">
+                          <input style="width:6em" type="number" class="form-control" value="{{carrito.cantidad}}" min="1" max="10" step="1" data-decimals="0" (change)="mostrar($event, i)" required>
+                        </div>
+                      </td>
+											<td class="total-col">{{totales[i]}}</td>
 											<td class="remove-col"><button class="btn-remove" (click)="eliminarCarrito(carrito.idCarrito)"><i class="icon-close"></i></button></td>
 										</tr>
 
@@ -78,43 +92,12 @@
 	                						</tr><!-- End .summary-total -->
 	                					</tbody>
 	                				</table><!-- End .table table-summary -->
-									
+
 									<!-- Payu pruebas -->
-									<form #form id="formulario" method="post" action="https://gateway.payulatam.com/ppp-web-gateway/">
-										<input name="merchantId"    type="hidden"  value={{idMercado}}   >
-										<input name="accountId"     type="hidden"  value={{idCuenta}} >
-										<input name="description"   type="hidden"  value={{descripcion}}  >
-										<input name="referenceCode" type="hidden"  value={{referenciaUnic}} > 
-										<!-- CODIGO UNICO -->
-										<input name="amount"        type="hidden"  value={{total}}   >
-										<input name="tax"           type="hidden"  value={{iva}}  >
-										<input name="taxReturnBase" type="hidden"  value={{iva*total}} >
-										<input name="currency"      type="hidden"  value={{moneda}} >
-										<input name="signature"     type="hidden"  value={{firmaElectronicaMD5}}  >
-										<input name="test"          type="hidden"  value="0" >
-										<input name="buyerEmail"    type="hidden"  value={{email}} >
-										<input name="responseUrl"   type="hidden"  value="">
-										<input name="confirmationUrl" type="hidden"  value="" >
-										<input type="submit" target="_blank" (click)="cargarDatos(form)" class="btn btn-outline-primary-2 btn-order btn-block btn-round" value="Pagar PayU">
-									  </form>
+
 <br>
 
-									  <form #formPrueb method="post" action="https://sandbox.checkout.payulatam.com/ppp-web-gateway-payu">
-										<input name="merchantId"    type="hidden"  value="508029"   >
-										<input name="accountId"     type="hidden"  value={{idCuentaTest}} >
-										<input name="description"   type="hidden"  value={{descripcion}}  >
-										<input name="referenceCode" type="hidden"  value={{referenciaUnic}} >
-										<input name="amount"        type="hidden"  value={{total}}  >
-										<input name="tax"           type="hidden"  value="0"  >
-										<input name="taxReturnBase" type="hidden"  value="0" >
-										<input name="currency"      type="hidden"  value={{moneda}} >
-										<input name="signature"     type="hidden"  value={{firmaElectronicaMD5Test}}   >
-										<input name="test"          type="hidden"  value="1" >
-										<input name="buyerEmail"    type="hidden"  value="test@test.com" >
-										<input name="responseUrl"    type="hidden"  value="https://front-sokashoes.vercel.app/miCuenta">
-										<input name="confirmationUrl" type="hidden"  value={{url}} >
-										<input type="submit" target="_blank" (click)="cargarDatos(formPrueb)" class="btn btn-outline-primary-2 btn-order btn-block btn-round" value="Pruebas">
-									  </form>
+
 	                			</div><!-- End .summary -->
 
 		            			<a href="category.html" class="btn btn-outline-dark-2 btn-block btn-round mb-3"><span>Continua comprando</span><i class="icon-refresh"></i></a>
