--- a/src/app/home/header/header/header.component.html
+++ b/src/app/home/header/header/header.component.html
@@ -47,7 +47,7 @@
                 </div>End .compare-dropdown -->
 
                 <div class="dropdown cart-dropdown">
-                    <a routerLink="" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
+                    <a routerLink="/carrito" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
                         <div class="icon">
                             <i class="icon-shopping-cart"></i>
                             <span *ngIf="cantidadTotal>0" class="cart-count">{{cantidadTotal}}</span>
@@ -84,7 +84,7 @@
                         </div><!-- End .dropdown-cart-total -->
 
                         <div class="dropdown-cart-action">
-                            <a routerLink="" class="btn btn-primary">Ver carrito</a>
+                            <a routerLink="/carrito" class="btn btn-primary">Ver carrito</a>
                         </div><!-- End .dropdown-cart-total -->
                     </div><!-- End .dropdown-menu -->
                 </div><!-- End .cart-dropdown -->
