--- a/src/app/home/forms/form-product/edit-productos/edit-productos.component.html
+++ b/src/app/home/forms/form-product/edit-productos/edit-productos.component.html
@@ -18,52 +18,45 @@
                                 <form [formGroup]="form" (submit)="onSubmit()">
                                     <input formControlName="idProducto" type="hidden" class="form-control">
                                     <div class="form-group">
-                                        <label for="exampleFormControlInput1">Categoría </label>
-                                        <select class="form-control" formControlName="categoria" *ngFor="let categoria of categorias">
-                                            <option value="{{categoria.idCategoria}}">{{categoria.nombre}}</option>
-                                        </select>
+                                      <label for="nombre">Nombre</label>
+                                      <input formControlName="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre">
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="exampleFormControlInput1">Precio</label>
-                                        <input formControlName="precio" type="number" class="form-control" id="exampleFormControlInput1" placeholder="0.0$">
+                                      <label for="descripcion">Descripcion</label>
+                                      <input formControlName="descripcion" type="text" class="form-control" id="descripcion" placeholder="Descripcion">
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="exampleFormControlInput1">Cantidad</label>
-                                        <input formControlName="cantidad" type="number" class="form-control" id="exampleFormControlInput1" placeholder="0">
+                                      <label for="precio">Precio</label>
+                                      <input formControlName="precio" type="number" class="form-control" id="precio" placeholder="0.0$">
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="exampleFormControlInput1">Imagen</label>
-                                        <input formControlName="urlImg" type="text" class="form-control" id="exampleFormControlInput1" placeholder="http://www...">
-                                    </div>
+                                      <label for="cantidad">Cantidad</label>
+                                      <input formControlName="cantidad" type="number" class="form-control" id="cantidad" placeholder="0">
+                                  </div>
 
-                                    <div class="form-group">
-                                        <label for="exampleFormControlInput1">Modelo</label>
-                                        <input formControlName="modelo" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Modelo">
-                                    </div>
+                                  <div class="form-group">
+                                    <label for="marca">Marca</label>
+                                    <select class="form-control" formControlName="marca">
+                                        <option *ngFor="let marca of marcas"  value="{{marca.idMarca}}" >{{marca.nombre}}</option>
+                                    </select>
+                                  </div>
 
-                                    <div class="form-group">
-                                        <label for="exampleFormControlInput1">Descripcion</label>
-                                        <input formControlName="descripcion" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Descripcion">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="exampleFormControlInput1">Marca</label>
-                                        <select class="form-control" formControlName="marca">
-                                            <option *ngFor="let marca of marcas"  value="{{marca.idMarca}}" >{{marca.nombre}}</option>
-                                        </select>
-                                    </div>
-
-                                    <button type="submit" class="btn btn-primary">Editar</button>
+                                  <div class="form-group">
+                                    <label for="categoria">Categoría</label>
+                                    <select class="form-control" formControlName="categoria">
+                                      <option *ngFor="let categoria of categorias" value="{{categoria.idCategoria}}">{{categoria.nombre}}</option>
+                                    </select>
+                                  </div>
+                                  <button type="submit" class="btn btn-primary">Editar</button>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </main>
-
         </div>
     </div>
 </body>
