--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -47,7 +47,7 @@
                 </div>End .compare-dropdown -->
 
                 <div class="dropdown cart-dropdown">
-                    <a routerLink="/carrito" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
+                    <a routerLink="/carrito" class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" data-display="static">
                         <div class="icon">
                             <i class="icon-shopping-cart"></i>
                         </div>
