--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,110 +1,99 @@
 <app-header></app-header>
-        <main class="main">
-        	<div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
-        		<div class="container">
-        			<h1 class="page-title">Carrito de compras<span>Comprar</span></h1>
-        		</div><!-- End .container -->
-        	</div><!-- End .page-header -->
-            <nav aria-label="breadcrumb" class="breadcrumb-nav">
-                <div class="container">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                        <li class="breadcrumb-item"><a routerLink ="/productos">Comprar</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Carrito de compras</li>
-                    </ol>
-                </div><!-- End .container -->
-            </nav><!-- End .breadcrumb-nav -->
+<main class="main">
+  <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
+    <div class="container">
+      <h1 class="page-title">Carrito de compras<span>Comprar</span></h1>
+    </div><!-- End .container -->
+  </div><!-- End .page-header -->
+  <nav aria-label="breadcrumb" class="breadcrumb-nav">
+    <div class="container">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+        <li class="breadcrumb-item"><a routerLink="/productos">Comprar</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Carrito de compras</li>
+      </ol>
+    </div><!-- End .container -->
+  </nav><!-- End .breadcrumb-nav -->
 
-            <div class="page-content">
-            	<div class="cart">
-	                <div class="container">
-	                	<div class="row">
-	                		<div class="col-lg-9">
-	                			<table class="table table-cart table-mobile">
-									<thead>
-										<tr>
-											<th></th>
-                      <th>Producto</th>
-											<th>Precio</th>
-                      <th>Color</th>
-                      <th>Talla</th>
-											<th>Cantidad</th>
-											<th>SubTotal</th>
-											<th></th>
-										</tr>
-									</thead>
-									<tbody >
-										<tr *ngFor="let carrito of carritos; let i = index" id="carrito{{carrito.idCarrito}}" [attr.data-index]="i">
-											<td width="100" class="product-col">
-												<div class="product">
-													<figure class="product-media">
-                            <img src="{{carrito.detalleProducto.img}}" alt="Product image">
-													</figure>
-                        </div>
-                      </td>
-                      <td width="200" class="product-col">
-												<div class="product">
-													<h3 class="product-title">
-                            <a href="#">{{carrito.detalleProducto.producto.nombre}}</a>
-                          </h3>
-                        </div>
-                      </td>
-											<td width="50" class="price-col">${{carrito.detalleProducto.producto.precio}}</td>
-											<td>
-                        <h3 width="60" class="product-title">
-                          <a href="#">{{carrito.detalleProducto.color.nombre}}</a>
-                        </h3>
-                      </td>
-                      <td width="60">
-                        <h3 class="product-title">
-                          <a href="#">{{carrito.detalleProducto.talla.numero}}</a>
-                        </h3>
-                      </td>
-                      <td width="40" class="quantity-col">
-                        <div class="cart-product-quantity">
-                          <input style="width:6em" type="number" class="form-control" value="{{carrito.cantidad}}" min="1" max="10" step="1" data-decimals="0" (change)="mostrar($event, i)" required>
-                        </div>
-                      </td>
-											<td class="total-col">{{totales[i]}}</td>
-											<td class="remove-col"><button class="btn-remove" (click)="eliminarCarrito(carrito.idCarrito)"><i class="icon-close"></i></button></td>
-										</tr>
+  <div class="page-content">
+    <div class="cart">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <table class="table table-cart table-mobile">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Producto</th>
+                  <th>Color</th>
+                  <th>Talla</th>
+                  <th>Cantidad</th>
+                  <th>Precio</th>
+                  <th>SubTotal</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let carrito of carritos; let i = index" id="carrito-{{i}}">
+                  <td width="100" class="product-col">
+                    <div class="product">
+                      <figure class="product-media"> <img src="{{carrito.detalleProducto.img}}" alt="Product image">
+                      </figure>
+                    </div>
+                  </td>
+                  <td width="200" class="product-col">
+                    <h3 class="product-title"> {{carrito.detalleProducto.producto.nombre}}</h3>
+                  </td>
+                  <td width="60">
+                    <h3 class="product-title"> {{carrito.detalleProducto.color.nombre}}</h3>
+                  </td>
+                  <td width="60">
+                    <h3 class="product-title"> {{carrito.detalleProducto.talla.numero}}</h3>
+                  </td>
+                  <td width="40" class="quantity-col">
+                    <div class="cart-product-quantity">
+                      <input id="cnt-{{i}}" style=width:6em type="number" class="form-control" value="{{carrito.cantidad}}" min="1" max="15" step="1" data-decimals="0"
+                       onkeydown="return false;" onkeyup="return false;" onpaste="return false;" style="caret-color: transparent; user-select: none; -moz-user-select: none; -webkit-user-select: none;">
+                    </div>
+                  </td>
+                  <td width="50" class="total-col">{{carrito.detalleProducto.producto.precio}}</td>
+                  <td class="total-col">{{carrito.cantidad * carrito.detalleProducto.producto.precio}}</td>
+                  <td class="remove-col">
+                    <button class="btn-remove" (click)="eliminarCarrito(i)"><i class="icon-close"></i></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table><!-- End .table table-wishlist -->
 
-									</tbody>
-								</table><!-- End .table table-wishlist -->
-
-	                			<div class="cart-bottom">
-			            			<a routerLink="/carrito" class="btn btn-outline-dark-2 btn-round"><span>Actualizar carrito</span><i class="icon-refresh"></i></a>
-		            			</div><!-- End .cart-bottom -->
-	                		</div><!-- End .col-lg-9 -->
-	                		<aside class="col-lg-3">
-	                			<div class="summary summary-cart">
-	                				<h3 class="summary-title">Total</h3><!-- End .summary-title -->
-
-	                				<table class="table table-summary">
-	                					<tbody>
-	                						<tr class="summary-subtotal">
-	                							<td>Subtotal:</td>
-	                							<td  id="subtotal-pagar">${{total}}</td>
-	                						</tr><!-- End .summary-subtotal -->
-	                						<tr class="summary-total" >
-	                							<td>Total:</td>
-	                							<td id="total-pagar">${{total}}</td>
-	                						</tr><!-- End .summary-total -->
-	                					</tbody>
-	                				</table><!-- End .table table-summary -->
-
-									<!-- Payu pruebas -->
-
-<br>
-
-
-	                			</div><!-- End .summary -->
-
-		            			<a href="category.html" class="btn btn-outline-dark-2 btn-block btn-round mb-3"><span>Continua comprando</span><i class="icon-refresh"></i></a>
-	                		</aside><!-- End .col-lg-3 -->
-	                	</div><!-- End .row -->
-	                </div><!-- End .container -->
-                </div><!-- End .cart -->
-            </div><!-- End .page-content -->
-        </main><!-- End .main -->
+            <div class="cart-bottom">
+              <button (click)="actualizarCarrito()" class="btn btn-outline-dark-2 btn-round">
+                <span>Actualizar carrito</span><i class="icon-refresh"></i>
+              </button>
+            </div><!-- End .cart-bottom -->
+          </div><!-- End .col-lg-9 -->
+          <aside class="col-lg-3">
+            <div class="summary summary-cart">
+              <h3 class="summary-title">Total</h3><!-- End .summary-title -->
+              <table class="table table-summary">
+                <tbody>
+                  <tr class="summary-subtotal">
+                    <td>Subtotal</td>
+                    <td id="subtotal-pagar">${{total}}</td>
+                  </tr><!-- End .summary-subtotal -->
+                  <tr class="summary-total">
+                    <td>Total:</td>
+                    <td id="total-pagar">${{total}}</td>
+                  </tr><!-- End .summary-total -->
+                </tbody>
+              </table><!-- End .table table-summary -->
+            </div><!-- End .summary -->
+            <button routerLink="/productos" class="btn btn-outline-dark-2 btn-round">
+              <span>Continua comprando</span><i class="icon-refresh"></i>
+            </button>
+          </aside><!-- End .col-lg-3 -->
+        </div><!-- End .row -->
+      </div><!-- End .container -->
+    </div><!-- End .cart -->
+  </div><!-- End .page-content -->
+</main><!-- End .main -->
 <app-footer></app-footer>
