--- a/src/app/home/contacto/contacto.component.html
+++ b/src/app/home/contacto/contacto.component.html
@@ -3,17 +3,22 @@
 
 <div class="container-contacts" >
     
-    <div class="row bloq-1">
-        <h1>Contáctanos</h1>
-        <br><hr style="width: 500px; color: green; height: 3px;">
-    </div>
+    
     
    <div class="row">
-    <div class="bloq-1">
+    <div class="bloq-2">
 
-        <h3>Siguenos a través de nuestras redes sociales</h3>
+        <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true" alt="">
+
+    </div>
+    <div class="bloq-1">
+        <div class="">
+            <h1>Contáctanos</h1>
+            <br><hr style="width: 500px; color: green; height: 3px;">
+        </div>
+        <h3>Síguenos</h3>
         
-        <div class="icons" >
+        <div class="icons row" >
             
             <a href="http://www.facebook.com"><img src="https://www.fcme.org/wp-content/uploads/Facebook-logo.png" alt=""></a>
             <a href="http://www.instagram.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1200px-Instagram-Icon.png" alt=""></a> 
@@ -22,25 +27,25 @@
                                
         </div>
         
+        <br><h3><i class="fas fa-envelope" style="text-align: left; font-size: 20px;"></i> Escribenos al correo</h3>
+        <h4>SokaShoes@gmail.com</h4>
 
         <br><h3><i class="fas fa-phone-alt" style="text-align: left; font-size: 19px;"></i> LLámanos</h3>
 
         <ul>
             
-            <li>312 333 0344 </li>            
+            <li>+(57) 312 333 0344 </li>            
             
         </ul>
 
-        <br><h3><i class="fas fa-envelope" style="text-align: left; font-size: 20px;"></i> Escribenos al correo</h3>
-        <h4>SokaShoes@gmail.com</h4>
-
+        <br><h3><i class="fas fa-phone-alt" style="text-align: left; font-size: 19px;"></i> Horarios</h3>
+        <ul>
+        <li>Lunes-Viernes: 8:00 - 16:00</li>
+        <li>Sábado: 9:00 - 12:00</li>
+        </ul>
     </div>
 
-    <div class="bloq-2">
-
-        <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true" alt="">
-
-    </div>
+    
 </div>
 </div>
 <app-footer></app-footer>
