--- a/src/app/home/contacto/contacto.component.html
+++ b/src/app/home/contacto/contacto.component.html
@@ -24,7 +24,7 @@
             <a href="http://www.instagram.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1200px-Instagram-Icon.png" alt=""></a> 
             <a href="http://www.twitter.com"><img src="https://www.computerhope.com/jargon/t/twitter.png" alt=""></a> 
             <a href="http://www.youtube.com"><img src="https://cdn.pixabay.com/photo/2021/06/25/04/20/youtube-6362801_960_720.png" alt=""> </a> 
-                               
+            <i class="fa-solid fa-user-check fa-2xs"></i>
         </div>
         
         <br><h3><i class="fas fa-envelope" style="text-align: left; font-size: 20px;"></i> Escribenos al correo</h3>
