Desarrollo de contáctanos

--- a/src/app/home/contacto/contacto.component.html
+++ b/src/app/home/contacto/contacto.component.html
@@ -1,5 +1,9 @@
 <app-header></app-header>
 <br>
+<div class="container">
+    <img src="../../../assets/images/panel.png" alt="">
+    <div class="text"><a href="/inicio">Inicio</a> > <a href="/contacto">Contactanos</a></div>
+</div>
 
 <div class="container-contacts" >
     
@@ -8,7 +12,7 @@
    <div class="row">
     <div class="bloq-2">
 
-        <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true" alt="">
+        <img src="../../../assets/images/Sandalia.png" alt="">
 
     </div>
     <div class="bloq-1">
@@ -16,7 +20,8 @@
             <h1>Contáctanos</h1>
             <br><hr style="width: 500px; color: green; height: 3px;">
         </div>
-        <h3>Síguenos</h3>
+        
+        <h3><i class="fas fa-user-check" style="text-align: left; font-size: 20px;"></i> Síguenos</h3>
         
         <div class="icons row" >
             
@@ -24,13 +29,13 @@
             <a href="http://www.instagram.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1200px-Instagram-Icon.png" alt=""></a> 
             <a href="http://www.twitter.com"><img src="https://www.computerhope.com/jargon/t/twitter.png" alt=""></a> 
             <a href="http://www.youtube.com"><img src="https://cdn.pixabay.com/photo/2021/06/25/04/20/youtube-6362801_960_720.png" alt=""> </a> 
-            <i class="fa-solid fa-user-check fa-2xs"></i>
+            
         </div>
         
         <br><h3><i class="fas fa-envelope" style="text-align: left; font-size: 20px;"></i> Escribenos al correo</h3>
         <h4>SokaShoes@gmail.com</h4>
 
-        <br><h3><i class="fas fa-phone-alt" style="text-align: left; font-size: 19px;"></i> LLámanos</h3>
+        <br><h3><i class="fas fa-phone" style="text-align: left; font-size: 19px;"></i> LLámanos</h3>
 
         <ul>
             
@@ -38,7 +43,7 @@
             
         </ul>
 
-        <br><h3><i class="fas fa-phone-alt" style="text-align: left; font-size: 19px;"></i> Horarios</h3>
+        <br><h3><i class="fas fa-clock" style="text-align: left; font-size: 19px;"></i> Horarios</h3>
         <ul>
         <li>Lunes-Viernes: 8:00 - 16:00</li>
         <li>Sábado: 9:00 - 12:00</li>
@@ -48,4 +53,19 @@
     
 </div>
 </div>
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-3" style="text-align: center">
+        <i class="fas fa-credit-card" style="text-align: right; font-size: 100px;"></i>
+        <h3>Medios de pago</h3>
+    </div>
+    <div class="col-3" style="text-align: center">
+        <i class="fas fa-truck" style="text-align: right; font-size: 100px;"></i>
+        <h3>Envios a todo el pais</h3>
+    </div>
+    <div class="col-3" style="text-align: center">
+        <i class="fas fa-check-circle" style="text-align: right; font-size: 100px;"></i>
+        <h3>Compra segura</h3>
+    </div>
+</div><br><br>
 <app-footer></app-footer>
