--- a/src/app/home/contacto/contacto.component.css
+++ b/src/app/home/contacto/contacto.component.css
@@ -75,7 +75,19 @@
     width: 440px;
     text-align: left;
 }
-
+.text{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+.text a{
+    color: black;
+    font-family: cursive;
+    font-weight: bolder;
+    text-decoration: none;
+}
 @media screen and (max-width:1100px) {
     .container-contacts{
         width: 90%;
