--- a/src/app/home/contacto/contacto.component.html
+++ b/src/app/home/contacto/contacto.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="bloq-1">
         <div class="">
-            <h1>Contáctanos</h1>
+            <h1 class="tittle">Contáctanos</h1>
             <br><hr style="width: 500px; color: green; height: 3px;">
         </div>
         
