Editar perfil , Campo de Usuarios

--- a/src/app/home/menu-admin/menu-admin.component.html
+++ b/src/app/home/menu-admin/menu-admin.component.html
@@ -8,10 +8,13 @@
     <nav class="dash-nav-list">
         <a routerLink="/admin" class="dash-nav-item">
             <i class="fas fa-home"></i> Dashboard </a>
+            
+        <a routerLink="/admin" class="dash-nav-item">
+            <i class="fas fa-child"></i> Usuarios </a>
 
         <a routerLink="/listaproductos" class="dash-nav-item">
             <i class="fas fa-chart-bar"></i> Productos</a>
-            <a routerLink="/agregarProducto" class="dash-nav-item">
-                <i class="fas fa-plus"></i> Agregar producto</a>
+        <a routerLink="/agregarProducto" class="dash-nav-item">
+            <i class="fas fa-plus"></i> Agregar producto</a>
     </nav>
 </div>
