--- a/src/app/administracion/page/editar-info/editar-info.component.html
+++ b/src/app/administracion/page/editar-info/editar-info.component.html
@@ -1,1 +1,57 @@
-<p>editar-info works!</p>
+<body>
+    <div class="dash">
+        <div class="dash-app">
+            <app-menu-admin></app-menu-admin>
+            <app-header-admin></app-header-admin>
+            <div class="container-contact100">
+                <div class="wrap-contact100">
+                    <div class="row">
+                        <div class="col-6">
+                            <form [formGroup]="form" (submit)="guardarUsuario()" class="contact100-form validate-form">
+                                <span class="contact100-form-title">
+                                    <h4 class="col-sm-10">Editar administrador</h4>
+                                </span>
+                                <hr style="color: rgb(5, 168, 5); height: 2px" />
+
+                                <input formControlName="id_Usuario" hidden type="hidden" class="form-control" />
+                                <input formControlName="roles" hidden type="hidden" class="form-control" />
+                                <input formControlName="password" hidden type="hidden" class="form-control" />
+
+                                <div class="wrap-input100 validate-input" data-validate="Por favor ingrese el nombre completo">
+                                    <span class="contact100-form-combo">Username</span>
+                                    <input style="height: 30px"
+                                        [class.is-valid]="form.controls.username.status == 'VALID'"
+                                        [class.is-invalid]="form.controls.username.status == 'INVALID'"
+                                        formControlName="username" class="input100" type="text" placeholder="Username" />
+                                    <span class="focus-input100"></span>
+                                </div>
+
+                                <div class="wrap-input100 validate-input" data-validate="Por favor ingrese el nombre completo">
+                                    <span class="contact100-form-combo">Email</span>
+                                    <input style="height: 30px" formControlName="email" class="input100" type="text" placeholder="email" />
+                                    <span class="focus-input100"></span>
+                                </div>
+
+                                <div class="wrap-input100 validate-input" data-validate="Por favor ingrese el nombre completo">
+                                    <span class="contact100-form-combo">Contraseña</span>
+                                    <textarea style="height: 50px" formControlName="password" class="input100" type="password" placeholder="password"></textarea>
+                                    <span class="focus-input100"></span>
+                                </div>
+
+                                <hr style="color: rgb(5, 168, 5)" />
+
+                                <div class="container-contact100-form-btn">
+                                    <button class="contact100-form-btn" type="submit">Guardar</button>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="col-6">
+                            <img [src]="" style="width: 100%; height: auto" alt="" srcset="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
