--- a/src/app/home/header-admin/header-admin.component.html
+++ b/src/app/home/header-admin/header-admin.component.html
@@ -11,7 +11,7 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                            <a class="dropdown-item" >Perfil</a>
+                            <a class="dropdown-item" routerLink="/editarinfo" >Mi Perfil</a>
                             <a class="dropdown-item" href="login.html">Cerrar sesión</a>
                         </div>
                     </div>
